<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ticket_navigation"
        android:icon="@drawable/ic_plane"
        android:title="@string/menu_ticket_title" />

    <item
        android:id="@+id/populer_places"
        android:icon="@drawable/ic_images"
        android:title="@string/menu_popular_places" />

    <item
        android:id="@+id/order_navigation"
        android:icon="@drawable/ic_order"
        android:title="@string/menu_order_title" />

    <item
        android:id="@+id/profile_navigation"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile_title" />
</menu>