...
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fly" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_masuk"
                    style="@style/ButtonApp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="9dp"
...
            app:layout_constraintTop_toBottomOf="@+id/ll_ticket_configuration"
            tools:visibility="visible">

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_keluar"
            style="@style/ButtonApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded_10_red"
            android:padding="9dp"
...
