...
    <string name="error_check_empty">Centang salah satu kotak ini</string>
    <string name="error_empty_field">Isi semua kolom isian</string>
    <string name="register_success">Register berhasil, saatnya verifikasi email kamu</string>
    <string name="text_submit">Submit</string>
    <string name="text_forgot_password_subtitle">Masukkan alamat email yang terhubung dengan akun anda.</string>
    <string name="text_forgot_password_title">Lupa Kata Sandi?</string>
    <string name="text_ya">Ya</string>
    <string name="text_batal">Batal</string>
    <string name="text_pilih_tanggal">Pilih tanggal</string>
    <string name="text_no_history_searching">Yahh, belum ada riwayat pencarian</string>

    <!--  Detail Ticket  -->
    <string name="text_get_notification">Dapatkan Notifikasi</string>
...
